[cleanup] Replace calls to Collectors.toList() with Stream.toList()
Signed-off-by: Stéphane Bégaudeau <stephane.begaudeau@obeo.fr>