@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2019, 2021 Obeo.
+ * Copyright (c) 2019, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -16,7 +16,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import org.eclipse.sirius.components.compatibility.api.IIdentifierProvider;
 import org.eclipse.sirius.components.diagrams.description.DiagramDescription;
@@ -57,7 +56,7 @@ public class RelationBasedSourceNodesProvider implements Function<VariableManage
         return cache.getElementsRepresenting(object).stream()
                 .filter(this.isFromCompatibleSourceMapping())
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
         // @formatter:on
     }
 
