@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021 Obeo.
+ * Copyright (c) 2021, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -18,7 +18,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.eclipse.emf.common.util.Diagnostic;
 import org.eclipse.emf.ecore.EObject;
@@ -71,7 +70,8 @@ public class EMFValidationService implements IValidationService {
                 return diagnostic.getChildren().stream()
                         .filter(diag -> this.filterDiagnosticByObject(diag, object))
                         .filter(diag -> this.filterDiagnosticByFeature(diag, feature))
-                        .collect(Collectors.toList());
+                        .map(Object.class::cast)
+                        .toList();
                 // @formatter:on
             }
         }
@@ -113,7 +113,8 @@ public class EMFValidationService implements IValidationService {
             .map(eObject -> diagnostician.validate(eObject, options))
             .map(Diagnostic::getChildren)
             .flatMap(Collection::stream)
-            .collect(Collectors.toList());
+            .map(Object.class::cast)
+            .toList();
         // @formatter:on
     }
 
