@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2019, 2022 Obeo.
+ * Copyright (c) 2019, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -16,7 +16,6 @@ import java.util.Base64;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.eclipse.sirius.components.annotations.spring.graphql.QueryDataFetcher;
 import org.eclipse.sirius.components.core.RepresentationMetadata;
@@ -68,7 +67,7 @@ public class EditingContextRepresentationsDataFetcher implements IDataFetcherWit
                 .stream()
                 .map(RepresentationDescriptor::getRepresentation)
                 .map(this::toRepresentationMetadata)
-                .collect(Collectors.toList());
+                .toList();
         // @formatter:on
 
         // @formatter:off
@@ -76,9 +75,10 @@ public class EditingContextRepresentationsDataFetcher implements IDataFetcherWit
                 .map(representation -> {
                     String value = Base64.getEncoder().encodeToString(representation.getId().getBytes());
                     ConnectionCursor cursor = new DefaultConnectionCursor(value);
-                    return new DefaultEdge<>(representation, cursor);
+                    Edge<RepresentationMetadata> edge = new DefaultEdge<>(representation, cursor);
+                    return edge;
                 })
-                .collect(Collectors.toList());
+                .toList();
         // @formatter:on
 
         ConnectionCursor startCursor = representationEdges.stream().findFirst().map(Edge::getCursor).orElse(null);
